--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -22,7 +22,7 @@
                             {% if cards %} 
                             {% for fotografias in cards %}
                             <li class="card">
-                                <a href="{% url 'imagem' %}">
+                                <a href="{% url 'imagem' fotografias.id %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/'%}{{ fotografias.foto }}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
