--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -29,7 +29,7 @@
                                         <img class="imagem__imagem" src="{{fotografias.foto.url}}">
                                     {% endif %}
                                 </a>
-                                <span class="card__tag">Estrelas</span>
+                                <span class="card__tag">{{ fotografias.categoria }}</span>
                                 <div class="card__info">
                                     <p class="card__titulo">{{ fotografias.nome }}</p>
                                     <div class="card__texto">
